# sky

./: .travis.yml  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package-conda.yml  python-publish.yml
data/: standard-parameters.yaml
examples/: run_ephemeris.py  run_gui.pyw  run_sky.py  test_sky.py  test_sky_new.py
src/gui/: __init__.py
src/sky/: __helpers.py  __init__.py  _static.py  ephemeris.py  exceptions.py  geometry.py  gui.py  io.py  observer.py  prague.py  prague_sky_model.py  render.py  simulation.py  sky.py  skytypes.py  visualise.py
src/sky/gui/: __init__.py
src/sky/prague/: __init__.py  exceptions.py  io.py  prague.py  render.py  skytypes.py
src/skygui/: __init__.py
src/skylight/: __init__.py  _static.py  ephemeris.py  observer.py  render.py  sky.py
src/skylight/prague/: prague.py
test/: ephemeris_doctest.py  geometry_doctest.py  observer_doctest.py  prague_doctest.py  render_doctest.py  sky_doctest.py
