[metadata]
name = sky
version = v1.0-beta
author = Evripidis Gkanias
author_email = ev.gkanias@ed.ac.uk
description = A package providing radiance, polarisation, and transmittance information from the daylight.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/evgkanias/sky
project_urls =
    Bug Tracker = https://github.com/evgkanias/sky
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
    Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows :: Windows 11

[options]
packages =
    sky
    skygui
package_dir =
     = src/
package_data =
    sky =
        data/PragueSkyModelDatasetGroundInfra.dat
        data/standard-parameters.yaml
    skygui =
        data/icon.png
python_requires = >=3.9