[metadata]
name = sky
version = v1.0-beta
author = Evripidis Gkanias
author_email = ev.gkanias@ed.ac.uk
description = A package providing radiance, polarisation, and transmittance information from the daylight.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/evgkanias/sky
license = GPLv3+
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
    Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows :: Windows 11

[options]
package_dir =
     = src
packages = find:
python_requires = >=3.9
package_data =
     = data/standard-parameters.yaml
install_requirements =
    numpy>=1.23.4
    scipy>=1.9.3
    matplotlib>=3.6.2
    numba>=0.56.3
    pandas>=1.5.1
    pillow>=9.2.0
    pysimplegui>=4.60.4
project_urls =
    Bug Reports = https://github.com/evgkanias/sky/issues
    Source = https://github.com/evgkanias/sky

[options.packages.find]
where = src